table spacings fixed

--- a/app/javascript/packs/stylesheets/CategoryHeader.scss
+++ b/app/javascript/packs/stylesheets/CategoryHeader.scss
@@ -1,27 +1,33 @@
 @import "global";
 
+.category__flex {
+  display: flex;
+  align-items: center;
+  padding-top: 40px;
+  font-family: BlinkMacSystemFont;
+  justify-content: center;
+}
 
 .category__header {
   display: flex;
   align-items: center;
-  margin: auto;
+  font-family: BlinkMacSystemFont;
+  justify-content: flex-start;
 }
 .category__header .category__number {
-  font-family: BlinkMacSystemFont;
   background-color: $primary;
   color: white;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   border-radius: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 20pt;
+  font-size: 16pt;
   font-weight: bold;
 }
 
 .category__header .category__description {
-  font-family: BlinkMacSystemFont;
   height: 110px;
   position: absolute;
   top: 50px;
@@ -30,10 +36,10 @@
   width: 200px;
   left: 170px;
   font-weight: 100;
+
 }
 
 .category__header .category__name {
-  font-family: BlinkMacSystemFont;
   margin-top: 0;
   margin-bottom: 0;
   font-size: 13pt;
@@ -43,9 +49,9 @@
   line-height: 1.25;
   color: black;
   font-weight: 700;
+  padding-left: 10px;
 
 }
-
-.category__header .btn .btn--secondary {
-
+.category__flex .btn .btn--secondary {
+  justify-content: flex-end;
 }
